@@ -1,0 +1,4 @@
+galpy.util.bovy_coords.custom_to_radec
+=======================================
+
+.. autofunction:: galpy.util.bovy_coords.custom_to_radec
