@@ -1525,12 +1525,17 @@ def test_radec_to_custom_pal5():
                                    [-numpy.sin(_RAPAL5),numpy.cos(_RAPAL5),0.],
                                    [0.,0.,1.]]))
     xieta= bovy_coords.radec_to_custom(_RAPAL5,_DECPAL5,T=_TPAL5,degree=False)
-    assert numpy.fabs(xieta[0]) < 10.**-8., 'radec_to_custom does not work properly for Pal 5 transformation'
-    assert numpy.fabs(xieta[1]) < 10.**-8., 'radec_to_custom does not work properly for Pal 5 transformation'
+
+    def checkrng(x, xpct, dom, shft):
+        return numpy.fabs(((numpy.fabs(x - xpct) + shft) % dom) - shft)
+
+    # 0 < xieta[0] < 2 * pi
+    assert checkrng(xieta[0], 0, 2*numpy.pi, 0) < 1e-8, 'radec_to_custom does not work properly for Pal 5 transformation'
+    assert checkrng(xieta[1], 0, numpy.pi, numpy.pi/2) < 1e-8, 'radec_to_custom does not work properly for Pal 5 transformation'
     # One more, rough estimate based on visual inspection of plot
     xieta= bovy_coords.radec_to_custom(240.,6.,T=_TPAL5,degree=True)
-    assert numpy.fabs(xieta[0]-11.) < 0.2, 'radec_to_custom does not work properly for Pal 5 transformation'
-    assert numpy.fabs(xieta[1]-6.) < 0.2, 'radec_to_custom does not work properly for Pal 5 transformation'
+    assert checkrng(xieta[0], 11., 2*numpy.pi, 0) < .2, 'radec_to_custom does not work properly for Pal 5 transformation'
+    assert checkrng(xieta[1], 6., numpy.pi, numpy.pi/2) < .2, 'radec_to_custom does not work properly for Pal 5 transformation'
     return None
 
 def test_pmrapmdec_to_custom_valueerror():
@@ -1570,6 +1575,105 @@ def test_pmrapmdec_to_custom_againstlb():
     assert numpy.all(numpy.fabs(pmlb_direct-pmlb_custom) < 10.**-8.), 'pmrapmdec_to_custom for transformation to pml,pmb does not work properly'
     _turn_on_apy()
     return None
+
+
+def test_custom_to_radec_valueerror():
+    # Test the custom_to_radec without T raises a ValueError
+    with pytest.raises(ValueError):
+        xieta = bovy_coords.custom_to_radec(20., 30.)
+    return None
+
+
+def test_custom_to_radec_againstlb():  # FIXME COMPARE TO DOCUMENT
+    _turn_off_apy()
+    ra, dec= 20., 30.
+    theta,dec_ngp,ra_ngp= bovy_coords.get_epoch_angles(2000.)
+    T= numpy.dot(numpy.array([[numpy.cos(ra_ngp),-numpy.sin(ra_ngp),0.],
+                              [numpy.sin(ra_ngp),numpy.cos(ra_ngp),0.],
+                              [0.,0.,1.]]),
+                 numpy.dot(numpy.array([[-numpy.sin(dec_ngp),0.,
+                                          numpy.cos(dec_ngp)],
+                                        [0.,1.,0.],
+                                        [numpy.cos(dec_ngp),0.,
+                                         numpy.sin(dec_ngp)]]),
+                           numpy.array([[numpy.cos(theta),numpy.sin(theta),0.],
+                                        [numpy.sin(theta),-numpy.cos(theta),0.],
+                                        [0.,0.,1.]])))
+    lb_direct= bovy_coords.radec_to_lb(ra,dec,degree=True)
+    lb_custom= bovy_coords.custom_to_radec(ra,dec,T=T,degree=True)
+    assert numpy.fabs(lb_direct[0]-lb_custom[0]) < 10.**-8., 'custom_to_radec for transformation to l,b does not work properly'
+    assert numpy.fabs(lb_direct[1]-lb_custom[1]) < 10.**-8., 'custom_to_radec for transformation to l,b does not work properly'
+    # Array
+    s= numpy.arange(2)
+    lb_direct= bovy_coords.radec_to_lb(ra*s,dec*s,degree=True)
+    lb_custom= bovy_coords.custom_to_radec(ra*s,dec*s,T=T,degree=True)
+    assert numpy.all(numpy.fabs(lb_direct-lb_custom) < 10.**-8.), 'radec_to_custom for transformation to l,b does not work properly'
+    _turn_on_apy()
+    return None
+
+
+def test_custom_to_radec_pal5():  # FIXME COMPARE TO DOCUMENT
+    # Test the custom ra,dec transformation for Pal 5
+    _RAPAL5= 229.018/180.*numpy.pi
+    _DECPAL5= -0.124/180.*numpy.pi
+    _TPAL5= numpy.dot(numpy.array([[numpy.cos(_DECPAL5),0.,numpy.sin(_DECPAL5)],
+                                   [0.,1.,0.],
+                                   [-numpy.sin(_DECPAL5),0.,numpy.cos(_DECPAL5)]]),
+                      numpy.array([[numpy.cos(_RAPAL5),numpy.sin(_RAPAL5),0.],
+                                   [-numpy.sin(_RAPAL5),numpy.cos(_RAPAL5),0.],
+                                   [0.,0.,1.]]))
+    xieta= bovy_coords.custom_to_radec(_RAPAL5,_DECPAL5,T=_TPAL5.T,degree=False)
+
+    def checkrng(x, xpct, dom, shft):
+        return numpy.fabs(((numpy.fabs(x - xpct) + shft) % dom) - shft)
+
+    # 0 < xieta[0] < 2 * pi
+    assert checkrng(xieta[0], 0, 2*numpy.pi, 0) < 1e-8, 'custom_to_radec does not work properly for Pal 5 transformation'
+    assert checkrng(xieta[1], 0, numpy.pi, numpy.pi/2) < 1e-8, 'custom_to_radec does not work properly for Pal 5 transformation'
+    # One more, rough estimate based on visual inspection of plot
+    xieta= bovy_coords.custom_to_radec(240.,6.,T=_TPAL5.T,degree=True)
+    assert checkrng(xieta[0], 11., 2*numpy.pi, 0) < .2, 'custom_to_radec does not work properly for Pal 5 transformation'
+    assert checkrng(xieta[1], 6., numpy.pi, numpy.pi/2) < .2, 'custom_to_radec does not work properly for Pal 5 transformation'
+    return None
+
+
+def test_custom_to_pmrapmdec_valueerror():
+    # Test the pmrapmdec_to_custom without T raises a ValueError
+    with pytest.raises(ValueError):
+        xieta= bovy_coords.custom_to_pmrapmdec(1.,1.,20.,30.)
+    return None
+
+
+def test_custom_to_pmrapmdec_againstlb():
+    _turn_off_apy()
+    ra, dec= 20., 30.
+    pmra, pmdec= -3.,4.
+    theta,dec_ngp,ra_ngp= bovy_coords.get_epoch_angles(2000.)
+    T= numpy.dot(numpy.array([[numpy.cos(ra_ngp),-numpy.sin(ra_ngp),0.],
+                              [numpy.sin(ra_ngp),numpy.cos(ra_ngp),0.],
+                              [0.,0.,1.]]),
+                 numpy.dot(numpy.array([[-numpy.sin(dec_ngp),0.,
+                                          numpy.cos(dec_ngp)],
+                                        [0.,1.,0.],
+                                        [numpy.cos(dec_ngp),0.,
+                                         numpy.sin(dec_ngp)]]),
+                           numpy.array([[numpy.cos(theta),numpy.sin(theta),0.],
+                                        [numpy.sin(theta),-numpy.cos(theta),0.],
+                                        [0.,0.,1.]])))
+    pmlb_direct= bovy_coords.pmrapmdec_to_pmllpmbb(pmra,pmdec,ra,dec, degree=True)
+    pmlb_custom= bovy_coords.custom_to_pmrapmdec(pmra,pmdec,ra,dec, T=T,degree=True)
+
+    assert numpy.fabs(pmlb_direct[0]-pmlb_custom[0]) < 10.**-8., 'custom_to_pmrapmdec for transformation to pml,pmb does not work properly'
+    assert numpy.fabs(pmlb_direct[1]-pmlb_custom[1]) < 10.**-8., 'custom_to_pmrapmdec for transformation to pml,pmb does not work properly'
+    # Array
+    s= numpy.arange(2)
+    pmlb_direct= bovy_coords.pmrapmdec_to_pmllpmbb(pmra*s,pmdec*s,
+                                                   ra*s,dec*s,degree=True)
+    pmlb_custom= bovy_coords.custom_to_pmrapmdec(pmra*s,pmdec*s, ra*s,dec*s,T=T,degree=True)
+    assert numpy.all(numpy.fabs(pmlb_direct-pmlb_custom) < 10.**-8.), 'custom_to_pmrapmdec for transformation to pml,pmb does not work properly'
+    _turn_on_apy()
+    return None
+
 
 # 02/06/2018 (JB): Edited for cases where astropy coords are always turned off
 # [case at hand: einsum bug in numpy 1.14 / python2.7 astropy]
